--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.4.1
 Django==3.1.7
 django-cors-headers==3.10.0
 django-countries==7.2.1
+django-email-verification==0.1.0
+django-extensions==3.1.3
 django-image==0.1.0
 django-phone-field==1.8.1
 django-phonenumber-field==5.2.0
